<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph_admin"
    app:startDestination="@id/nav_admin_dashboard">

    <!-- DASHBOARD -->
    <fragment
        android:id="@+id/nav_admin_dashboard"
        android:name="com.example.concentradospt.ui.admin.DashboardFragment"
        android:label="@string/dashboard_title">
        <action
            android:id="@+id/action_dashboard_to_gestion_productos"
            app:destination="@id/nav_admin_gestion_productos" />
        <action
            android:id="@+id/action_dashboard_to_gestion_usuarios"
            app:destination="@id/nav_admin_gestion_usuarios" />
        <action
            android:id="@+id/action_admin_dashboard_to_ventas"
            app:destination="@id/nav_admin_ventas" />
        <action
            android:id="@+id/action_admin_dashboard_to_reportes"
            app:destination="@id/nav_admin_reportes_ventas" />
    </fragment>

    <!-- VENTAS -->
    <fragment
        android:id="@+id/nav_admin_ventas"
        android:name="com.example.concentradospt.ui.admin.VentasFragment"
        android:label="Ventas">
        <action
            android:id="@+id/action_ventas_to_detalle_venta"
            app:destination="@id/nav_admin_detalle_venta" />
    </fragment>

    <!-- DETALLE VENTA -->
    <fragment
        android:id="@+id/nav_admin_detalle_venta"
        android:name="com.example.concentradospt.ui.admin.DetalleVentaFragment"
        android:label="Detalle de Venta">
        <argument
            android:name="ventaId"
            app:argType="long"
            android:defaultValue="0L" />
    </fragment>

    <!-- GESTIÓN PRODUCTOS -->
    <fragment
        android:id="@+id/nav_admin_gestion_productos"
        android:name="com.example.concentradospt.ui.admin.GestionProductosFragment"
        android:label="@string/manage_products_title" />

    <!-- GESTIÓN USUARIOS -->
    <fragment
        android:id="@+id/nav_admin_gestion_usuarios"
        android:name="com.example.concentradospt.ui.admin.GestionUsuariosFragment"
        android:label="@string/manage_users_title" />

    <!-- REPORTES DE VENTAS -->
    <fragment
        android:id="@+id/nav_admin_reportes_ventas"
        android:name="com.example.concentradospt.ui.reportes.ReportesVentasFragment"
        android:label="@string/sales_reports_title" />

</navigation>
